@@ -642,6 +642,7 @@ Release 0.21.0 - Unreleased
    HBASE-3185  User-triggered compactions are triggering splits!
    HBASE-1932  Encourage use of 'lzo' compression... add the wiki page to
                getting started
+   HBASE-3151  NPE when trying to read regioninfo from .META.
 
 
   IMPROVEMENTS
